--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -561,13 +561,13 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dxi-Xw-GwC">
                                 <rect key="frame" x="15" y="192" width="363" height="575"/>
                                 <connections>
-                                    <segue destination="6qh-dF-NMs" kind="embed" id="oLB-V5-DHz"/>
+                                    <segue destination="6qh-dF-NMs" kind="embed" identifier="ISBNType" id="oLB-V5-DHz"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zfn-m5-Gx5">
                                 <rect key="frame" x="15" y="192" width="365" height="575"/>
                                 <connections>
-                                    <segue destination="o5O-tf-R97" kind="embed" id="6Er-ca-LWj"/>
+                                    <segue destination="o5O-tf-R97" kind="embed" identifier="ISBNScan" id="6Er-ca-LWj"/>
                                 </connections>
                             </containerView>
                         </subviews>
