--- a/Goldence/View/Base.lproj/Main.storyboard
+++ b/Goldence/View/Base.lproj/Main.storyboard
@@ -644,6 +644,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="儲存"/>
+                                <connections>
+                                    <action selector="saveButtonTapped:" destination="6qh-dF-NMs" eventType="touchUpInside" id="dtR-mE-LVO"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bTW-st-t5q"/>
@@ -653,6 +656,7 @@
                         <outlet property="authorLabel" destination="VAT-ce-xsM" id="435-Jw-Unh"/>
                         <outlet property="bookImage" destination="fOh-0a-5ML" id="FfN-mT-DSe"/>
                         <outlet property="isbnTextField" destination="7c8-Z7-jJp" id="k43-6A-0Dz"/>
+                        <outlet property="saveButton" destination="E4y-ex-4H0" id="l3L-wZ-Uym"/>
                         <outlet property="searchButton" destination="04z-Ch-w5r" id="ObX-zG-gm8"/>
                         <outlet property="titleLabel" destination="5vf-bE-XMJ" id="RAQ-To-n3F"/>
                     </connections>
